# saltwater

./: .gitignore  .rustfmt.toml  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FAQ.md  IMPLEMENTATION_DEFINED.md  LICENSE.txt  README.md  build.rs  coverage.sh  mycpp  reference-gram.y  rustfmt.toml  test.sh
.github/: report-issue.sh  sub.py
.github/ISSUE_TEMPLATE/: bad_parse.md  bug_report.md  codegen_bug.md  panic.md
benches/: examples.rs  parens.rs
examples/: readme.c
fuzz/: .gitignore  Cargo.toml  hfuzz.rs
fuzz/afl/: garbage.rs
fuzz/afl/inputs/: compound.c  decl.c  init.c  ret_expr.c
fuzz/fuzz_targets/: garbage.rs  hfuzz.rs
headers/: stdarg.h  stddef.h
minimizer/: README.md  minimize.sh  run_cargo.sh
minimizer/conditions/: output_contains.sh  return_code_equals.sh  return_code_is_not.sh
parser/: .rustfmt.toml  Cargo.toml
parser/benches/: parens.rs
parser/src/: decl.rs  expr.rs  fold.rs  lib.rs  main.rs  stmt.rs
parser/src/analyze/: expr.rs  init.rs  mod.rs  stmt.rs
parser/src/arch/: mod.rs
parser/src/data/: ast.rs  error.rs  hir.rs  lex.rs  mod.rs  types.rs
parser/src/lex/: mod.rs  tests.rs
reference/: if_state.dot
saltwater-codegen/: Cargo.toml  expr.rs  lib.rs  static_init.rs  stmt.rs
saltwater-parser/: Cargo.toml  fold.rs  intern.rs  lib.rs  macros.rs
saltwater-parser/analyze/: expr.rs  mod.rs
saltwater-parser/arch/: mod.rs  x64.rs
saltwater-parser/data/: ast.rs  error.rs  hir.rs  mod.rs  types.rs
saltwater-parser/lex/: cpp.rs  files.rs  replace.rs
saltwater-parser/parse/: decl.rs  stmt.rs
saltwater-repl/: Cargo.toml  commands.rs  helper.rs  repl.rs
saltwater-repl/src/: main.rs  repl.rs
src/: backend.rs  data.rs  fold.rs  intern.rs  ir.rs  lex.rs  lib.rs  llvm.rs  macros.rs  main.rs  mir.rs  parse.rs  utils.rs
src/analyze/: expr.rs  init.rs  mod.rs  stmt.rs
src/arch/: mod.rs  x64.rs
src/backend/: mod.rs  x64.rs
src/data/: ast.rs  error.rs  hir.rs  lex.rs  mod.rs  types.rs
src/ir/: expr.rs  mod.rs  pretty.rs  static_init.rs  stmt.rs
src/lex/: cpp.rs  files.rs  mod.rs  replace.rs  tests.rs
src/parse/: decl.rs  expr.rs  implicit.c  mod.rs  stmt.rs
src/repl/: commands.rs  helper.rs  mod.rs
tests/: c-testsuite.sh  csmith.sh  decls.rs  expr.rs  func.rs  fuzz.sh  headers.rs  hfuzz.sh  jit.rs  pre-commit.sh  return.rs  runner.rs  simple.rs  stack-overflow.rs  stmt.rs  utils.rs  varargs.rs
tests/c-headers/: assert.c  ctype.c  errno.c  gen_headers.sh  inttypes.c  locale.c  math.c  setjmp.c  signal.c  stdarg.c  stdatomic.c  stddef.c  stdint.c  stdio.c  stdlib.c  string.c  tgmath.c  time.c  uchar.c  wchar.c  wctype.c
tests/runner-tests/: conditional.c  factorial.c  fibonacci.c  hello_world.c  index.c  io.c  no_type.c  overflow.c  readme.c  ret.c  segfault.c
tests/runner-tests/cpp/: overflow.c
tests/runner-tests/cpp/define/: double-function.c  function.c  multiple-tokens.c  syntax-error.c  syntax-error2.c  triple-function.c  wrong-args.c
tests/runner-tests/cpp/if/: 0.c  defined.c  elif.c  elif2.c  elif3.c  elif4.c  nested.c  trailing.c
tests/runner-tests/cpp/include/: local-relative-parent.c  local.c  local.h  permission_denied.c  subdir-local.c
tests/runner-tests/decls/: abstract_param_in_definition.c  big_array.c  declare_global.c  declare_local.c  enum_overflow.c  enum_self_assign.c  exotic_qualifiers.c  float-limits.c  forward_struct_declaration.c  large_locals.c  multiple_initializers.c  overflow_array_size.c  recursive_struct.c  scope.c  static_initializers.c  string.c  struct.c  struct_initializers.c  syntax.c  test_different_types.c  union_initializers.c  useless_declaration.c
tests/runner-tests/decls/alignment/: 0.c  1.c
tests/runner-tests/decls/bad_signature_for_main/: 0.c  1.c  2.c  3.c  4.c
tests/runner-tests/decls/declare_local_function/: 0.c  1.c
tests/runner-tests/decls/forward_declaration/: 0.c  1.c  2.c  3.c  4.c  5.c  6.c
tests/runner-tests/decls/function/: 0.c  1.c  2.c  3.c  4.c  5.c  6.c  decay-ptr.c  qualifiers.c  typedef.c
tests/runner-tests/decls/infer_array_bounds/: 0.c  1.c  2.c  3.c
tests/runner-tests/decls/linkage/: 0.c  1.c  2.c  3.c  4.c  5.c  extern_after_static.c
tests/runner-tests/decls/redefinition/: 0.c  1.c  2.c
tests/runner-tests/decls/scope/: 0.c  1.c
tests/runner-tests/decls/struct_and_enum/: 0.c  1.c  2.c  3.c
tests/runner-tests/decls/test_decl_after_init/: 0.c  1.c
tests/runner-tests/decls/test_decl_and_func_definition/: 0.c  1.c  2.c
tests/runner-tests/decls/test_initializers/: 0.c  1.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c
tests/runner-tests/decls/typedef/: 0.c  1.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c  9.c  enums_members_are_same_scope.c  inner_scope.c  tags_are_different_scope.c
tests/runner-tests/decls/union/: 1.c
tests/runner-tests/expr/: arrays_are_commutative.c  multistrings.c  primary.c  sizeof.c  strings.c  typedef_cast.c  typedef_sizeof.c  union.c
tests/runner-tests/expr/add/: 0.c  1.c  2.c  3.c
tests/runner-tests/expr/arrays/: 0.c  1.c  2.c  3.c  4.c  5.c  6.c
tests/runner-tests/expr/assign/: 0.c  1.c  10.c  11.c  12.c  13.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c  9.c  compound_int.c  compound_struct.c  pointer_math.c  struct_align.c
tests/runner-tests/expr/band/: 0.c  1.c  2.c  3.c  4.c  5.c
tests/runner-tests/func/: declaration_before_definition.c  extern_call.c  intern_call.c  nested.c  no_prototype.c  paren.c  qualifiers.c  recursion.c  undefined.c  varargs.c  void-pointer.c  void.c
tests/runner-tests/fuzz/: 185.c  261.c  282.c  abstract-decl.c  deref-noop.c  invalid-sizeof.c  switch-while.c
tests/runner-tests/lex/: unicode.c  unterminated.c
tests/runner-tests/limits/: sizeof.c  unary.c
tests/runner-tests/simple/: empty_program_is_err.c
tests/runner-tests/stack-overflow/: aggregate_init.c  decl.c  expr.c  stmt.c
tests/runner-tests/stmt/: do_loop.c  label.c  main_is_special.c  pointer_cast.c  strlen.c  syntax_errors.c  void.c
tests/runner-tests/varargs/: multiple_given_args.c
tests/stack-overflow/: decl-analyze.c  scalar_init.c  unary.c  unary_analyze.c
tests/utils/: mod.rs
(+181 files in other folders)
