[package]
name = "saltwater"
version = "0.11.0"
authors = [
  "Joshua Nelson <jyn514@gmail.com>",
  "Graham Scheaffer <me@gisch.dev>",
  "Wesley Norris <repnop@outlook.com>",
  "playX",
  "Kevin Becker <k.becker@byter.dev>",
  "Hunter Damron <hdamron@email.sc.edu>",
  "Justus K <justus.k@protonmail.com>",
]
edition = "2018"
description = "A C compiler written in Rust, with a focus on good error messages."
repository = "https://github.com/jyn514/saltwater/"
readme = "README.md"
categories = ["development-tools", "parser-implementations"]
license = "BSD-3-Clause"
keywords = ["C", "compiler", "recursive-descent", "cranelift"]
default-run = "swcc"
documentation = "https://docs.rs/saltwater"

[dependencies]
ansi_term = "0.12"
arcstr = "0.2"
tempfile = "3"
pico-args = { version = "0.3.4", features = ["short-space-opt"] }
color-backtrace = { version = "0.4", default-features = false, optional = true }
atty = { version = "0.2", default-features = false }
git-testament = { version = "0.1", optional = true }
rand = { version = "0.7", optional = true }
rodio = { version = "0.11.0", optional = true }
saltwater-parser = { path = "saltwater-parser", version = "0.11.0" }
saltwater-codegen = { path = "saltwater-codegen", version = "0.11.0" }

[dev-dependencies]
env_logger = { version = "0.7", default-features = false }
log = "0.4"
criterion = "0.3"
walkdir = "2"

[features]
default = ["color-backtrace"]
salty = ["rand", "rodio"]
jit = ["saltwater-codegen/jit"]
# for internal use
_test_headers = []

[workspace]
members = ["saltwater-repl"]

[[bin]]
name = "swcc"
path = "src/main.rs"

[[bench]]
name = "examples"
harness = false
required-features = ["jit"]

[[bench]]
name = "parens"
harness = false

[[test]]
name = "jit"
required-features = ["jit"]

[[test]]
name = "runner"

[[test]]
name = "varargs"

[[test]]
name = "headers"
# MacOS breaks if you pass -undef to the system preprocessor
required-features = ["_test_header"]

[profile.release]
lto = true

[profile.test]
debug = false  # speeds up link time

[profile.bench]
opt-level = 3
debug = false
lto = true
debug-assertions = false
codegen-units = 1
incremental = false
overflow-checks = false

[package.metadata.docs.rs]
all-features = true
# opt-out of non-default targets
targets = []
