[package]
name = "parser"
version = "0.1.0"
authors = ["Joshua Nelson <jyn514@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
string-interner = "*"
lazy_static = "*"
codespan = "0.8"
hexf-parse = "0.1"
#rcc = { path = "../" }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "parens"
harness = false
