[package]
name = "saltwater-repl"
version = "0.1.0"
authors = ["Justus K <justus.k@protonmail.com>"]
edition = "2018"

[dependencies]
saltwater-codegen = { path = "../saltwater-codegen", features = ["jit"] }
saltwater-parser = { path = "../saltwater-parser" }
rustyline = "6.2"
rustyline-derive = "0.3"
dirs-next = "1.0"
owo-colors = "1.1"

[[bin]]
name = "swcci"
path = "src/main.rs"
